Removing animation from the collapse as it's causing layout issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -211,17 +211,14 @@ svg.icon {
  }
  .collapsible {
    height: auto;
-   transition: all 0.4s ease-in-out;
  }
 
  .collapsible.collapse {
-   display: none;
-   height: 0 !important;
-   opacity: 0 !important;
-   margin: 0 !important;
-   padding: 0 !important;
-   border: none !important;
-   pointer-events: none !important;
+   height: 0;
+   overflow: hidden;
+   opacity: 0;
+   padding: 0;
+   margin: 0;
  }
 
 
